--- a/about.html
+++ b/about.html
@@ -1,77 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style/style.css">
-</head>
-<body class=" bg-neutral-200">
-  <div class="custom-container">
-    <header>
-        <nav>
-            <div class="flex items-center justify-between py-5">
-              <a href="./index.html">
-                <img src="./images/logo.png" alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="bg-[#f5f5f5]">
+    <header class="mb-20 max-md:mb-5 sticky top-0 bg-[#f5f5f5] z-9">
+      <nav class="flex justify-between items-center py-8 custom-container">
+        <a href="./index.html">
+          <img src="../images/logo.png" alt="" />
+        </a>
+
+        <!-- laptop  -->
+        <ul class="flex gap-7 max-md:hidden">
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./index.html">Home</a>
+          </li>
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./works.html">Works</a>
+          </li>
+          <li
+            class="hover:text-primary text-primary font-bold hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./about.html">About</a>
+          </li>
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./contact.html">Contact</a>
+          </li>
+        </ul>
+
+        <!-- mobile  -->
+        <input type="checkbox" id="menu-toggle" class="hidden peer" />
+        <label
+          for="menu-toggle"
+          class="hidden border border-neutral-200 rounded-full size-10 max-md:flex justify-center items-center cursor-pointer"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-menu"
+          >
+            <line x1="4" x2="20" y1="12" y2="12" />
+            <line x1="4" x2="20" y1="6" y2="6" />
+            <line x1="4" x2="20" y1="18" y2="18" />
+          </svg>
+        </label>
+
+        <!-- Mobile Sidebar -->
+        <div
+          class="fixed inset-y-0 z-10 left-0 w-64 bg-white shadow-lg transform -translate-x-full peer-checked:translate-x-0 transition-transform duration-300 ease-in-out max-md:block hidden"
+        >
+          <ul class="p-4 space-y-4">
+            <li>
+              <a class="p-2" href="./index.html">
+                <img src="../images/logo.png" alt="" />
               </a>
-    
-            <ul class="flex gap-7">
-              <li>
-                <a class="  text-lg hover:text-primary duration-300" href="./index.html">Home</a>
-              </li>
-              <li>
-                <a class=" text-lg hover:text-primary duration-300" href="./works.html">Works</a>
-              </li>
-              <li>
-                <a class=" text-lg text-primary font-bold hover:text-primary duration-300" href="./about.html">About</a>
-              </li>
-              <li>
-                <a class=" text-lg hover:text-primary duration-300" href="./contact.html">Contact</a>
-              </li>
-            </ul>
-            </div>
-          </nav>
+            </li>
+            <li>
+              <a href="./index.html" class="block p-2 hover:bg-gray-200"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="./works.html" class="block p-2 hover:bg-gray-200"
+                >Works</a
+              >
+            </li>
+            <li>
+              <a
+                href="./about.html"
+                class="block p-2 hover:bg-gray-200 bg-gray-200"
+                >About</a
+              >
+            </li>
+            <li>
+              <a href="./contact.html" class="block p-2 hover:bg-gray-200"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
-
-    <main>
-    about
-      
-    </main>
-
-   
-  </div>
-
-  <footer>
-    <div class="bg-neutral-50 py-10 px-20">
-      <div class="custom-container flex justify-between items-start">
-        <div class=" flex flex-col items-start gap-10">
-          <img src="./images/logo.png" alt="">
-
-          <div class="flex flex-col gap-4">
-            <p class="text-neutral-500 text-sm">Contact</p>
-            <p class=" text-sm">mms-it.com</p>
-            <p class="text-sm">+959250152018</p>
-          </div>
+    <div class="custom-container">
+      <!-- who i am  -->
+      <section class="mb-10 max-w-[794px]">
+        <div class="flex items-center gap-3 mb-3">
+          <div class="w-5 h-[3px] bg-neutral-900"></div>
+          <p class="font-medium text-2xl max-md:text-base">Who am I?</p>
         </div>
-
-        <div class="flex gap-20">
-          <div class="flex flex-col gap-4">
-            <p class="text-neutral-500 text-sm">Pages</p>
-            <p class=" text-sm">Home</p>
-            <p class=" text-sm">Works</p>
-            <p class=" text-sm">About</p>
-            <p class=" text-sm">Contact</p>
-          </div>
-          <div class="flex flex-col gap-4">
-            <p class="text-neutral-500 text-sm">Pages</p>
-            <p class=" text-sm">Home</p>
-            <p class=" text-sm">Works</p>
-            <p class=" text-sm">About</p>
-            <p class=" text-sm">Contact</p>
-          </div>
-        </div>
-      </div>
+        <p class="font-bold text-[40px] max-md:text-xl text-neutral-900 mb-2">
+          Designing Thoughtful, Functional Products
+        </p>
+        <p class="text-neutral-500 text-lg max-md:text-base">
+          I'm a product designer based in Bangkok, blending creativity and
+          problem-solving to create products that people love to use.
+        </p>
+      </section>
     </div>
-  </footer>
-</body>
+
+    <img
+      class="h-[600px] max-md:h-[400px] object-cover w-full mb-10"
+      src="../images/about.png"
+      alt=""
+    />
+
+    <div class="custom-container">
+      <section class="mb-20 max-md:mb-10">
+        <div class="grid grid-cols-3 max-md:grid-cols-1 gap-5">
+          <div
+            class="p-8 border border-neutral-200 rounded-xl hover:translate-y-[-10px] hover:border-primary duration-300"
+          >
+            <div class="flex items-center gap-5 mb-5">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.49991 0.876892C3.84222 0.876892 0.877075 3.84204 0.877075 7.49972C0.877075 11.1574 3.84222 14.1226 7.49991 14.1226C11.1576 14.1226 14.1227 11.1574 14.1227 7.49972C14.1227 3.84204 11.1576 0.876892 7.49991 0.876892ZM1.82708 7.49972C1.82708 4.36671 4.36689 1.82689 7.49991 1.82689C10.6329 1.82689 13.1727 4.36671 13.1727 7.49972C13.1727 10.6327 10.6329 13.1726 7.49991 13.1726C4.36689 13.1726 1.82708 10.6327 1.82708 7.49972ZM5.03747 9.21395C4.87949 8.98746 4.56782 8.93193 4.34133 9.08991C4.11484 9.24789 4.05931 9.55956 4.21729 9.78605C4.93926 10.8211 6.14033 11.5 7.50004 11.5C8.85974 11.5 10.0608 10.8211 10.7828 9.78605C10.9408 9.55956 10.8852 9.24789 10.6587 9.08991C10.4323 8.93193 10.1206 8.98746 9.9626 9.21395C9.41963 9.99238 8.51907 10.5 7.50004 10.5C6.481 10.5 5.58044 9.99238 5.03747 9.21395ZM5.37503 6.84998C5.85828 6.84998 6.25003 6.45815 6.25003 5.97498C6.25003 5.4918 5.85828 5.09998 5.37503 5.09998C4.89179 5.09998 4.50003 5.4918 4.50003 5.97498C4.50003 6.45815 4.89179 6.84998 5.37503 6.84998ZM10.5 5.97498C10.5 6.45815 10.1083 6.84998 9.62503 6.84998C9.14179 6.84998 8.75003 6.45815 8.75003 5.97498C8.75003 5.4918 9.14179 5.09998 9.62503 5.09998C10.1083 5.09998 10.5 5.4918 10.5 5.97498Z"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+              <span class="text-neutral-800 text-2xl font-semibold">143</span>
+            </div>
+
+            <p class="font-medium text-lg text-neutral-900">Happy Clients</p>
+          </div>
+
+          <div
+            class="p-8 border border-neutral-200 rounded-xl hover:translate-y-[-10px] hover:border-primary duration-300"
+          >
+            <div class="flex items-center gap-5 mb-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-check"
+              >
+                <path d="M20 6 9 17l-5-5" />
+              </svg>
+              <span class="text-neutral-800 text-2xl font-semibold">42</span>
+            </div>
+
+            <p class="font-medium text-lg text-neutral-900">
+              Completed Projects
+            </p>
+          </div>
+
+          <div
+            class="p-8 border border-neutral-200 rounded-xl hover:translate-y-[-10px] hover:border-primary duration-300"
+          >
+            <div class="flex items-center gap-5 mb-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-wallet"
+              >
+                <path
+                  d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
+                />
+                <path d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4" />
+              </svg>
+              <span class="text-neutral-800 text-2xl font-semibold">88</span>
+            </div>
+
+            <p class="font-medium text-lg text-neutral-900">Funds Raised</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- contact me  -->
+      <section>
+        <div
+          class="flex max-md:flex-col max-md:items-start max-md:gap-5 justify-between items-start mb-20"
+        >
+          <div class="flex items-center gap-3">
+            <div class="w-5 h-[3px] bg-neutral-900"></div>
+            <p class="font-medium text-2xl max-md:text-base">Contact Me</p>
+          </div>
+
+          <div class="w-[644px] max-md:w-full">
+            <p class="text-2xl text-neutral-700 mb-5 max-md:text-base">
+              Send a message
+            </p>
+
+            <form action="" class="flex flex-col gap-5">
+              <input class="input" type="text" placeholder="Name" />
+              <input class="input" type="enail" placeholder="Email" />
+              <textarea
+                class="input"
+                rows="5"
+                placeholder="Message"
+                name=""
+                id=""
+              ></textarea>
+
+              <a href="#">
+                <button
+                  class="primary-btn rounded-md flex gap-1 justify-center items-center w-full"
+                >
+                  Send
+
+                  <svg
+                    width="15"
+                    height="15"
+                    viewBox="0 0 15 15"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.20308 1.04312C1.00481 0.954998 0.772341 1.0048 0.627577 1.16641C0.482813 1.32802 0.458794 1.56455 0.568117 1.75196L3.92115 7.50002L0.568117 13.2481C0.458794 13.4355 0.482813 13.672 0.627577 13.8336C0.772341 13.9952 1.00481 14.045 1.20308 13.9569L14.7031 7.95693C14.8836 7.87668 15 7.69762 15 7.50002C15 7.30243 14.8836 7.12337 14.7031 7.04312L1.20308 1.04312ZM4.84553 7.10002L2.21234 2.586L13.2689 7.50002L2.21234 12.414L4.84552 7.90002H9C9.22092 7.90002 9.4 7.72094 9.4 7.50002C9.4 7.27911 9.22092 7.10002 9 7.10002H4.84553Z"
+                      fill="currentColor"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </button>
+              </a>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <footer class="bg-[#fafafa]">
+      <div class="custom-container pt-10 max-md:text-sm">
+        <div
+          class="flex max-md:flex-col max-md:gap-10 justify-between max-md:items-center pb-5"
+        >
+          <div
+            class="flex flex-col justify-between items-start max-md:items-center"
+          >
+            <a href="./index.html">
+              <img class="max-md:mb-10" src="../images/logo.png" alt="" />
+            </a>
+
+            <div class="flex flex-col gap-4 max-md:items-center">
+              <p class="text-neutral-500">Contact</p>
+              <p class="">mms-it.com</p>
+              <p class="">+959250152018</p>
+            </div>
+          </div>
+
+          <div
+            class="flex max-md:flex-col max-md:gap-10 justify-between gap-20"
+          >
+            <div class="flex flex-col gap-4">
+              <p class="text-neutral-500">Pages</p>
+              <p class="">Home</p>
+              <p class="">Works</p>
+              <p class="">About</p>
+              <p class="">Contact</p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+              <p class="text-neutral-500">Pages</p>
+              <p class="">Home</p>
+              <p class="">Works</p>
+              <p class="">About</p>
+              <p class="">Contact</p>
+            </div>
+          </div>
+        </div>
+        <p class="text-center pb-10 text-neutral-500">
+          &copy; 2025 MMS IT, All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
