--- a/works.html
+++ b/works.html
@@ -3,85 +3,289 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="bg-neutral-200">
+  <body class="bg-[#f5f5f5]">
+    <header class="mb-20 max-md:mb-5 sticky top-0 bg-[#f5f5f5] z-9">
+      <nav class="flex justify-between items-center py-8 custom-container">
+        <a href="./index.html">
+          <img src="../images/logo.png" alt="" />
+        </a>
+
+        <!-- laptop  -->
+        <ul class="flex gap-7 max-md:hidden">
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./index.html">Home</a>
+          </li>
+          <li
+            class="hover:text-primary text-primary font-bold hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./works.html">Works</a>
+          </li>
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./about.html">About</a>
+          </li>
+          <li
+            class="hover:text-primary hover:scale-105 cursor-pointer transition"
+          >
+            <a href="./contact.html">Contact</a>
+          </li>
+        </ul>
+
+        <!-- mobile  -->
+        <input type="checkbox" id="menu-toggle" class="hidden peer" />
+        <label
+          for="menu-toggle"
+          class="hidden border border-neutral-200 rounded-full size-10 max-md:flex justify-center items-center cursor-pointer"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-menu"
+          >
+            <line x1="4" x2="20" y1="12" y2="12" />
+            <line x1="4" x2="20" y1="6" y2="6" />
+            <line x1="4" x2="20" y1="18" y2="18" />
+          </svg>
+        </label>
+
+        <!-- Mobile Sidebar -->
+        <div
+          class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg transform -translate-x-full peer-checked:translate-x-0 transition-transform duration-300 ease-in-out max-md:block hidden z-10"
+        >
+          <ul class="p-4 space-y-4">
+            <li>
+              <a class="p-2" href="./index.html">
+                <img src="../images/logo.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="./index.html" class="block p-2 hover:bg-gray-200"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="./works.html"
+                class="block p-2 hover:bg-gray-200 bg-gray-200"
+                >Works</a
+              >
+            </li>
+            <li>
+              <a href="./about.html" class="block p-2 hover:bg-gray-200"
+                >About</a
+              >
+            </li>
+            <li>
+              <a href="./contact.html" class="block p-2 hover:bg-gray-200"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <div class="custom-container">
-      <header>
-        <nav>
-          <div class="flex items-center justify-between py-5">
-            <a href="./index.html">
-              <img src="./images/logo.png" alt="" />
-            </a>
-
-            <ul class="flex gap-7">
-              <li>
-                <a
-                  class="text-lg hover:text-primary duration-300"
-                  href="./index.html"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-lg font-bold text-primary hover:text-primary duration-300"
-                  href="./works.html"
-                  >Works</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-lg hover:text-primary duration-300"
-                  href="./about.html"
-                  >About</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-lg hover:text-primary duration-300"
-                  href="./contact.html"
-                  >Contact</a
-                >
-              </li>
-            </ul>
+      <!-- works  -->
+      <section>
+        <div class="flex justify-between items-center mb-10">
+          <div class="flex items-center gap-3">
+            <div class="w-5 h-[3px] bg-neutral-900"></div>
+            <p class="font-medium text-2xl max-md:text-base">All Works</p>
           </div>
-        </nav>
-      </header>
+        </div>
 
-      <main>works</main>
-    </div>
+        <div class="grid grid-cols-3 max-md:grid-cols-1 gap-x-5 gap-y-10">
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img1.png"
+              alt=""
+            />
 
-    <footer>
-      <div class="bg-neutral-50 py-10 px-20">
-        <div class="custom-container flex justify-between items-start">
-          <div class="flex flex-col items-start gap-10">
-            <img src="./images/logo.png" alt="" />
-
-            <div class="flex flex-col gap-4">
-              <p class="text-neutral-500 text-sm">Contact</p>
-              <p class="text-sm">mms-it.com</p>
-              <p class="text-sm">+959250152018</p>
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
             </div>
           </div>
 
-          <div class="flex gap-20">
-            <div class="flex flex-col gap-4">
-              <p class="text-neutral-500 text-sm">Pages</p>
-              <p class="text-sm">Home</p>
-              <p class="text-sm">Works</p>
-              <p class="text-sm">About</p>
-              <p class="text-sm">Contact</p>
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img2.png"
+              alt=""
+            />
+
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
             </div>
-            <div class="flex flex-col gap-4">
-              <p class="text-neutral-500 text-sm">Pages</p>
-              <p class="text-sm">Home</p>
-              <p class="text-sm">Works</p>
-              <p class="text-sm">About</p>
-              <p class="text-sm">Contact</p>
+          </div>
+
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img3.png"
+              alt=""
+            />
+
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
+            </div>
+          </div>
+
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img4.png"
+              alt=""
+            />
+
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
+            </div>
+          </div>
+
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img5.png"
+              alt=""
+            />
+
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
+            </div>
+          </div>
+
+          <div class="cursor-pointer hover:scale-105 duration-300">
+            <img
+              class="rounded-xl mb-4 object-cover"
+              src="../images/img6.png"
+              alt=""
+            />
+
+            <div class="flex flex-col gap-1">
+              <p class="text-neutral-900 font-semibold">FreshCart UI</p>
+              <p class="text-neutral-500">FreshCart (Grocery Delivery)</p>
             </div>
           </div>
         </div>
+      </section>
+
+      <hr class="border-b border-neutral-200 my-20 max-md:my-10" />
+
+      <!-- contact me  -->
+      <section>
+        <div
+          class="flex max-md:flex-col max-md:items-start max-md:gap-5 justify-between items-start mb-20"
+        >
+          <div class="flex items-center gap-3">
+            <div class="w-5 h-[3px] bg-neutral-900"></div>
+            <p class="font-medium text-2xl max-md:text-base">Contact Me</p>
+          </div>
+
+          <div class="w-[644px] max-md:w-full">
+            <p class="text-2xl text-neutral-700 mb-5 max-md:text-base">
+              Send a message
+            </p>
+
+            <form action="" class="flex flex-col gap-5">
+              <input class="input" type="text" placeholder="Name" />
+              <input class="input" type="enail" placeholder="Email" />
+              <textarea
+                class="input"
+                rows="5"
+                placeholder="Message"
+                name=""
+                id=""
+              ></textarea>
+
+              <a href="#">
+                <button
+                  class="primary-btn rounded-md flex gap-1 justify-center items-center w-full"
+                >
+                  Send
+
+                  <svg
+                    width="15"
+                    height="15"
+                    viewBox="0 0 15 15"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.20308 1.04312C1.00481 0.954998 0.772341 1.0048 0.627577 1.16641C0.482813 1.32802 0.458794 1.56455 0.568117 1.75196L3.92115 7.50002L0.568117 13.2481C0.458794 13.4355 0.482813 13.672 0.627577 13.8336C0.772341 13.9952 1.00481 14.045 1.20308 13.9569L14.7031 7.95693C14.8836 7.87668 15 7.69762 15 7.50002C15 7.30243 14.8836 7.12337 14.7031 7.04312L1.20308 1.04312ZM4.84553 7.10002L2.21234 2.586L13.2689 7.50002L2.21234 12.414L4.84552 7.90002H9C9.22092 7.90002 9.4 7.72094 9.4 7.50002C9.4 7.27911 9.22092 7.10002 9 7.10002H4.84553Z"
+                      fill="currentColor"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </button>
+              </a>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <footer class="bg-[#fafafa]">
+      <div class="custom-container pt-10 max-md:text-sm">
+        <div
+          class="flex max-md:flex-col max-md:gap-10 justify-between max-md:items-center pb-5"
+        >
+          <div
+            class="flex flex-col justify-between items-start max-md:items-center"
+          >
+            <a href="./index.html">
+              <img class="max-md:mb-10" src="../images/logo.png" alt="" />
+            </a>
+
+            <div class="flex flex-col gap-4 max-md:items-center">
+              <p class="text-neutral-500">Contact</p>
+              <p class="">mms-it.com</p>
+              <p class="">+959250152018</p>
+            </div>
+          </div>
+
+          <div
+            class="flex max-md:flex-col max-md:gap-10 justify-between gap-20"
+          >
+            <div class="flex flex-col gap-4">
+              <p class="text-neutral-500">Pages</p>
+              <p class="">Home</p>
+              <p class="">Works</p>
+              <p class="">About</p>
+              <p class="">Contact</p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+              <p class="text-neutral-500">Pages</p>
+              <p class="">Home</p>
+              <p class="">Works</p>
+              <p class="">About</p>
+              <p class="">Contact</p>
+            </div>
+          </div>
+        </div>
+        <p class="text-center pb-10 text-neutral-500">
+          &copy; 2025 MMS IT, All Rights Reserved.
+        </p>
       </div>
     </footer>
   </body>
