--- a/works.html
+++ b/works.html
@@ -10,7 +10,7 @@
     <header class="mb-20 max-md:mb-5 sticky top-0 bg-[#f5f5f5] z-9">
       <nav class="flex justify-between items-center py-8 custom-container">
         <a href="./index.html">
-          <img src="../images/logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
         </a>
 
         <!-- laptop  -->
@@ -68,7 +68,7 @@
           <ul class="p-4 space-y-4">
             <li>
               <a class="p-2" href="./index.html">
-                <img src="../images/logo.png" alt="" />
+                <img src="./images/logo.png" alt="" />
               </a>
             </li>
             <li>
@@ -110,7 +110,7 @@
         <div class="grid grid-cols-3 max-md:grid-cols-1 gap-x-5 gap-y-10">
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img1.png"
               alt=""
             />
@@ -123,7 +123,7 @@
 
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img2.png"
               alt=""
             />
@@ -136,7 +136,7 @@
 
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img3.png"
               alt=""
             />
@@ -149,7 +149,7 @@
 
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img4.png"
               alt=""
             />
@@ -162,7 +162,7 @@
 
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img5.png"
               alt=""
             />
@@ -175,7 +175,7 @@
 
           <div class="cursor-pointer hover:scale-105 duration-300">
             <img
-              class="rounded-xl mb-4 object-cover"
+            class="rounded-xl mb-4 object-cover"
               src="../images/img6.png"
               alt=""
             />
@@ -253,7 +253,7 @@
             class="flex flex-col justify-between items-start max-md:items-center"
           >
             <a href="./index.html">
-              <img class="max-md:mb-10" src="../images/logo.png" alt="" />
+              <img class"max-md:mb-10" src="../images/logo.png" alt="" />
             </a>
 
             <div class="flex flex-col gap-4 max-md:items-center">
