--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <header class="mb-20 max-md:mb-5 sticky top-0 bg-[#f5f5f5] z-9">
       <nav class="flex justify-between items-center py-8 custom-container">
         <a href="./index.html">
-          <img src="./images/logo.png" alt="" />
+          <img src="../images/logo.png" alt="" />
         </a>
 
         <!-- laptop  -->
@@ -68,7 +68,7 @@
           <ul class="p-4 space-y-4">
             <li>
               <a class="p-2" href="./index.html">
-                <img src="./images/logo.png" alt="" />
+                <img src="../images/logo.png" alt="" />
               </a>
             </li>
             <li>
@@ -167,7 +167,7 @@
             class="flex flex-col justify-between items-start max-md:items-center"
           >
             <a href="./index.html">
-              <img class"max-md:mb-10" src="../images/logo.png" alt="" />
+              <img class="max-md:mb-10" src="../images/logo.png" alt="" />
             </a>
 
             <div class="flex flex-col gap-4 max-md:items-center">
